# dns-updater

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: compile-release.yml
src/: digitalocean.rs  main.rs  updater.rs  wan_ip_query.rs
