[package]
name = "dns-updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]
anyhow = "1.0"
chrono = "0.4.31"
clap = { version = "4.4", features = ["derive", "env"] }
dotenv = "0.15.0"
futures-util = "0.3.28"
log = "0.4.20"
reqwest = { version = "0.11.22", default-features = false, features = [
    "rustls-tls",
    "json",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple_logger = "4.2"
thiserror = "1.0"
time = "0.3.30"
tokio = { version = "1.33", features = ["full"] }
url = "2.4.1"
